--- a/package.json
+++ b/package.json
@@ -3,25 +3,16 @@
   "version": "1.0.0",
   "description": "A simple web api proxy.",
   "scripts": {
-    "start": "babel-node api/api.es6"
+    "start": "node api/api.js"
   },
   "author": "Doug Day",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "6.7.2",
-    "babel-preset-stage-0": "6.5.0",
     "body-parser": "1.15.0",
-    "babel-cli": "6.5.1",
-    "babel-core": "6.5.1",
-    "babel-eslint": "5.0.0",
-    "babel-loader": "6.2.3",
-    "babel-plugin-react-display-name": "2.0.0",
-    "babel-plugin-react-transform": "2.0.0",
-    "babel-preset-es2015": "6.5.0",
-    "babel-preset-react": "6.5.0",
-    "babel-preset-stage-1": "6.5.0",
+    "colors": "^1.1.2",
     "express": "4.13.4",
-    "request": "2.69.0",
+    "minimist": "^1.2.0",
+    "request": "2.69.0"
   },
   "keywords:": [
     "web",
